Smaller journal page title Fixed stretch in character image Removed empty Abilites and Armor on NPC sheet Fixed duplicate talents in NPC enrichment Added subtable description for monster attacks Vision enabled as default for prototype tokens Re-generate thumbnails when importing a scene

--- a/less/character-sheet.less
+++ b/less/character-sheet.less
@@ -83,6 +83,7 @@
                 width: auto;
                 margin: 0px;
                 border: 0px solid transparent;
+                object-fit: cover;
             }
             h1 {
                 position: relative;
