--- a/less/dragonbane.less
+++ b/less/dragonbane.less
@@ -78,7 +78,7 @@
     
     
                 .title {
-                    font-size: 4em;
+                    font-size: 2em;
                     font-weight: bolder;
                     text-transform: uppercase;
                     text-align: center;
